Fixed horizontal center align on <main>

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,7 +12,7 @@ body {
 main {
     margin-top: 2rem;
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
